
    Additionally, retrieving the source package name in that way defaults to the
    binary package name if no Source record is explicit, so there is no need to
    check if it's empty.

    It is not used in many places in the aptitude code (about 6 files and 10
    different functions/places), but this speeds-up and simplifies the code
    considerably where it was used.

- Documentation:

  * Guide/User's Manual:

    * Remove grouping policy "hier" from doc/??/aptitude.xml (the
      categorial/hierarchical browser features were removed in version 0.7)

- Translation updates:

  * Russian by Lev Lamberov (Closes: #798485, #769428)


[2015-09-06]
Version 0.7.1

- Bug fixes:

  * Fix for wrong reported size of deleted files with 'autoclean' on 32-bit
    arches (Closes: #499872)

  * Be explicit when packages are already installed, cannot be removed/purged
    because they are not installed, and similar (Closes: #421469).

    It was changed to work in this way a few years ago in #258913 due to the
    installer, and required to pass verbose flag to print these messages, but
    this was caused at least 3 bug reports (merged) to be explicit, and aptitude
    prints many other messages even ignoring these lines.  It can be made to be
    quiet with another flag, if needed.

  * Check string formats for columns in both curses and command line interface,
    and forbid characters which can lead to cwidget assertions and program
    crashes.  These strings can be specified in the the command line for
    "search" or "versions" with -F or configuration options (and they can be
    made permanent by mistake, causing crashes upon start, as the bug reports
    prove). (Closes: #497129, #532662).

- Documentation:

  * Quick help (help.txt):

    * Document 'l' (Limit Display) in quick help (Closes: #514541)

    * Improve description of '_' (Purge) (Closes: #495326)

    * Improve the description of the search shortcut, and point more clearly to