@@ -84,6 +84,9 @@ Version 0.7.2 UNRELEASED
     different functions/places), but this speeds-up and simplifies the code
     considerably where it was used.
 
+  * New helper dpkg_selections.{h,cc}, to help to manage saving selections to
+    the dpkg database (--set-selections)
+
 - Documentation:
 
   * Guide/User's Manual:
